# drf-restwind

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
app/: __init__.py  apps.py  mixins.py  permissions.py  urls.py
app/books/: __init__.py  apps.py  models.py  serializers.py  views.py
app/books/tests/: __init__.py  test_models.py  test_views.py
app/users/: __init__.py  apps.py  models.py  serializers.py
app/users/tests/: __init__.py  test_models.py
rest_wind/: __init__.py  apps.py
rest_wind/locale/ar/LC_MESSAGES/: django.po
rest_wind/locale/cn/LC_MESSAGES/: django.po
rest_wind/locale/de/LC_MESSAGES/: django.po
rest_wind/locale/es/LC_MESSAGES/: django.po
rest_wind/locale/fr/LC_MESSAGES/: django.po
rest_wind/locale/ru/LC_MESSAGES/: django.po
rest_wind/locale/tr/LC_MESSAGES/: django.po
rest_wind/static/rest_wind/: README.md  package-lock.json  package.json
rest_wind/static/rest_wind/css/: app.css  pygments.css  styles.css
rest_wind/templates/django_filters/rest_framework/: form.html
rest_wind/templates/rest_framework/: base.html  login_base.html  raw_data_form.html
rest_wind/templates/rest_framework/components/: dialogs.html  field_errors.html  form.html  languages.html  theme.html  themes.html
rest_wind/templates/rest_framework/filters/: base.html  ordering.html  search.html
rest_wind/templates/rest_framework/horizontal/: checkbox.html  checkbox_multiple.html  fieldset.html  input.html  radio.html  select.html  select_multiple.html  textarea.html
rest_wind/templates/rest_framework/inline/: checkbox.html  checkbox_multiple.html  fieldset.html  input.html  radio.html  select.html  select_multiple.html  textarea.html
rest_wind/templates/rest_framework/pagination/: numbers.html  previous_and_next.html
rest_wind/templates/rest_framework/vertical/: checkbox.html  checkbox_multiple.html  fieldset.html  input.html  radio.html  select.html  select_multiple.html  textarea.html
rest_wind/templatetags/: __init__.py  rest_wind.py
