[tool.poetry]
name = "drf-restwind"
version = "1.1.0"
description = "drf-restwind, a modern re-imagining of the Django REST Framework utilizes TailwindCSS and DaisyUI to provide flexible and customizable UI solutions with minimal coding effort."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rest_wind" }]
homepage = "https://github.com/youzarsiph/drf-restwind"
repository = "https://github.com/youzarsiph/drf-restwind"
documentation = "https://github.com/youzarsiph/drf-restwind"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2.5"
djangorestframework = ">=3.16.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
