[tool.poetry]
name = "drf-restwind"
version = "1.2.0"
description = "drf-restwind, a modern re-imagining of the Django REST Framework utilizes TailwindCSS and DaisyUI to provide flexible and customizable UI solutions with minimal coding effort."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rest_wind" }]
homepage = "https://github.com/youzarsiph/drf-restwind"
repository = "https://github.com/youzarsiph/drf-restwind"
documentation = "https://github.com/youzarsiph/drf-restwind"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2.5"
djangorestframework = ">=3.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
